Send DOMMenuItemActive when mouse enters menu item rects. This fixes Places on Mac OS X. Cocoa impl coming up. b=329337 r=mento sr=ben